--- a/src/app/components/adder/adder.component.less
+++ b/src/app/components/adder/adder.component.less
@@ -1,23 +1,26 @@
 @import '../../less/variables';
 .adder {
-    background-color: @background;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
     width:80px;
     height: 80px;
     border-radius: 50%;
+
     display: grid;
-    align-items: center;
-    justify-content: center;
-    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.43);
-    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.43);
-    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.43);
-    transition: box-shadow .5s;
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    transition: width .5s, border-radius .5s, height .5s;
     grid-template-columns: 1fr;
     grid-auto-columns: 1fr;
     grid-template-areas: 'icon';
+
+    align-items: center;
+    justify-content: center;
+    
+    background-color: @background;
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.43);
+    -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.43);
+    box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.43);
+
+    transition: width .5s, border-radius .5s, height .5s, box-shadow .5s;
     .icon {
         justify-self: center;
         grid-area: icon;
@@ -57,5 +60,5 @@
     }
 }
 .adder.expand {
-    height: 90vh;
+    height: 100%;
 }
