--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -1,4 +1,16 @@
 @import '../../less/variables';
+.wrap {
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 80px;
+    .col {
+        position: relative;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
 .navbar {
     display: grid;
     background-color: @background;
