--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,7 +6,7 @@ app-navbar {
     position: fixed;
     z-index: 300;
     width:100%;
-    height: 100%;
+    pointer-events: none;
 }
 app-adder {
     z-index: 2;
