--- a/src/app/components/adder/adder.component.less
+++ b/src/app/components/adder/adder.component.less
@@ -7,6 +7,8 @@
     height: 80px;
     border-radius: 50%;
 
+    pointer-events: all;
+
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-columns: 1fr;
