--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -3,7 +3,9 @@
     height: 100vh;
     display: grid;
     grid-template-rows: 80px;
+    pointer-events: none;
     .col {
+        display: block;
         position: relative;
         bottom: 0;
         right: 0;
@@ -12,21 +14,22 @@
     }
 }
 .navbar {
+    pointer-events: all;
     display: grid;
-    background-color: @background;
     width: 100%;
     min-height: 80px;
     grid-auto-columns: 1fr;
     grid-template-rows: 80px;
     grid-auto-rows: auto;
     grid-template-areas: 'logo logo links';
+
     color: #c29d52;
+    background-color: @background;
     text-shadow: 1px -1px 0px @contrast, 2px -2px 0px @contrast;
-    transition: 2s;
     -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
-
+    transition: 2s;
     .logo {
         grid-area: logo;
         align-self: center;
