--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
-<app-navbar></app-navbar>
+<div class="wrap">
+    <app-navbar (adding)="toggleAdding($event)"></app-navbar>
+    <div class="col">
+        <app-adder (adding)="toggleAdding($event)"></app-adder>
+    </div>
+    <agm-map [latitude]="latitude" [longitude]="longitude" [streetViewControl]=false [zoomControl]=false [zoom]=15 (mapClick)="onChooseLocation($event)">
+        <agm-marker *ngFor="let marker of markers" [latitude]="marker.latitude" [longitude]="marker.longitude"></agm-marker>
+    </agm-map>
+</div>
 <!-- <app-pitstop></app-pitstop> -->
-<agm-map [latitude]="latitude" [longitude]="longitude" [streetViewControl]=false [zoomControl]=false [zoom]=15 (mapClick)="onChooseLocation($event)">
-  <agm-marker *ngFor="let marker of markers" [latitude]="marker.latitude" [longitude]="marker.longitude"></agm-marker>
-</agm-map>
