--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,13 +1,29 @@
 // @import 'variables';
 agm-map {
     height: 99vh;
+    pointer-events: all;
 }
 app-navbar {
     position: fixed;
-    z-index: 300;
+    z-index: 4;
     width:100%;
     pointer-events: none;
 }
-app-adder {
-    z-index: 2;
+
+.wrap {
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 80px;
+    pointer-events: none;
+    .col {
+        pointer-events: none;
+        z-index: 3;
+        grid-row: 2;
+        display: block;
+        position: relative;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
