--- a/src/app/components/adder/adder.component.html
+++ b/src/app/components/adder/adder.component.html
@@ -1,6 +1,6 @@
 <div class="adder {{modifier}}">
   <div class="icon" (click)="toggleAdder($event)">{{adderIcon}}</div>
   <div *ngIf="open" class="content" (click)="expandAdder($event)">
-    Content
+    Please Select A Point
   </div>
 </div>
