--- a/src/app/components/adder/adder.component.less
+++ b/src/app/components/adder/adder.component.less
@@ -1,5 +1,6 @@
-@import '../../less/variables';
+@import '../../less/main';
 .adder {
+    z-index: 500;
     position: absolute;
     bottom: 10px;
     right: 10px;
