--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,8 +1,4 @@
 // @import 'variables';
-agm-map {
-    height: 99vh;
-    pointer-events: all;
-}
 app-navbar {
     position: fixed;
     z-index: 4;
@@ -25,5 +21,10 @@ app-navbar {
         right: 0;
         width: 100%;
         height: 100%;
+        * {
+            pointer-events: all;
+            display: block;
+            overflow: hidden;
+        }
     }
 }
