--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -1,4 +1,4 @@
-@import '../../less/variables';
+@import '../../less/main';
 .navbar {
     pointer-events: all;
     display: grid;
@@ -8,7 +8,6 @@
     grid-template-rows: 80px;
     grid-auto-rows: auto;
     grid-template-areas: 'logo logo links';
-
     color: #c29d52;
     background-color: @background;
     text-shadow: 1px -1px 0px @contrast, 2px -2px 0px @contrast;
@@ -16,6 +15,10 @@
     -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
     box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
     transition: 2s;
+    a {
+        text-decoration-line: none;
+        color: @primary;
+    }
     .logo {
         grid-area: logo;
         align-self: center;
