--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'app/less/main';
 body {
     margin: 0;
-    font-family: 'Notable', sans-serif;
     height: 100%;
+    background-color: @background;
+    overflow: hidden;
+    * {
+        font-family: 'Notable', sans-serif;
+    }
 }
