--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -78,12 +78,14 @@
             height: 99vh;
             background-color: @background;
             right: 0;
+            top: 0;
             padding-top: 100px;
             z-index: -1;
             width: 200px;
             -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
+            
         }
     }
 }
