--- a/src/app/components/login/login.component.less
+++ b/src/app/components/login/login.component.less
@@ -5,6 +5,7 @@
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-areas: '. form .';
     margin: 5% 0;
+    color: @contrast;
     .form {
         grid-area: form;
         .login-form {
@@ -15,6 +16,9 @@
             -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
             -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
             box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+            input {
+                margin: 10px 5px;
+            }
         }
     }
     a {
