--- a/src/app/components/adder/adder.component.html
+++ b/src/app/components/adder/adder.component.html
@@ -1,10 +1,24 @@
 <div class="adder {{modifier}}">
-  <div class="icon" (click)="toggleAdder($event)">{{adderIcon}}</div>
-  <div *ngIf="open" class="content" (click)="expandAdder($event)">
-    <div class="form">
-       <button href="" class="button primary" (click)="onLogin()">Log In</button>
-       <button class="button secoundary" (click)="onSignup()">Sign Up</button>
-      
+    <div class="icon" (click)="toggleAdder($event)">{{adderIcon}}</div>
+    <div *ngIf="open" class="content">
+        <div *ngIf="!loggedIn;else loggedIn" class="form">
+            <button href="" class="button primary" (click)="onLogin()">Log In</button>
+            <button class="button secoundary" (click)="onSignup()">Sign Up</button>
+        </div>
+        <ng-template #loggedIn>
+            <div *ngIf="!point;else hasPoint">
+                Select a point
+            </div>
+            <ng-template #hasPoint>
+                <button *ngIf="!expanded;else isExpanded" class="button primary" (click)="expandAdder($event)">Add Pitstop</button>
+                <ng-template #isExpanded>
+                    <form (ngSubmit)="onLoginSubmit()">
+                        <input type="text" placeholder="Pitstop Name">
+                        <textarea placeholder="Notes"></textarea>
+                        <button class="button primary">Add Pitstop</button>
+                    </form>
+                </ng-template>
+            </ng-template>
+        </ng-template>
     </div>
-  </div>
 </div>
