--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -51,7 +51,7 @@
         
     }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: @mobile) {
     .navbar {
         grid-template-areas: 'logo logo menu' 'links links links';
         .menu {
