--- a/src/app/less/components/input.less
+++ b/src/app/less/components/input.less
@@ -1,9 +1,100 @@
 @import 'variables';
-input[type='text'], input[type='password'] {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 40px;
-    font-size: 24px;
-    background-color: white;
-    border: 3px solid @primary;
-    border-radius: 5px;
+input[type='text'],
+input[type='password'] {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  height: 40px;
+  font-size: 24px;
+  background-color: white;
+  border: 3px solid @contrast;
+  border-radius: 5px;
+}
+textarea {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 24px;
+  border: 1px solid @primary;
+}
+input[type='range'] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 8.95px 0;
+}
+input[type='range']:focus {
+  outline: none;
+}
+input[type='range']::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10.1px;
+  cursor: pointer;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: @contrast;
+  border-radius: 1.3px;
+  border: 0.2px solid @primary;
+}
+input[type='range']::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px @background, 0px 0px 1px #0d0d0d;
+  border: 2.8px solid @background;
+  height: 28px;
+  width: 38px;
+  border-radius: 5px;
+  background: @primary;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -9.15px;
+}
+input[type='range']:focus::-webkit-slider-runnable-track {
+  background: @contrast;
+}
+input[type='range']::-moz-range-track {
+  width: 100%;
+  height: 10.1px;
+  cursor: pointer;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: @contrast;
+  border-radius: 1.3px;
+  border: 0.2px solid @primary;
+}
+input[type='range']::-moz-range-thumb {
+  box-shadow: 1px 1px 1px @background, 0px 0px 1px #0d0d0d;
+  border: 2.8px solid @background;
+  height: 28px;
+  width: 38px;
+  border-radius: 5px;
+  background: @primary;
+  cursor: pointer;
+}
+input[type='range']::-ms-track {
+  width: 100%;
+  height: 10.1px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type='range']::-ms-fill-lower {
+  background: @contrast;
+  border: 0.2px solid @primary;
+  border-radius: 2.6px;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type='range']::-ms-fill-upper {
+  background: @contrast;
+  border: 0.2px solid @primary;
+  border-radius: 2.6px;
+  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type='range']::-ms-thumb {
+  box-shadow: 1px 1px 1px @background, 0px 0px 1px #0d0d0d;
+  border: 2.8px solid @background;
+  height: 28px;
+  width: 38px;
+  border-radius: 5px;
+  background: @primary;
+  cursor: pointer;
+  height: 10.1px;
+}
+input[type='range']:focus::-ms-fill-lower {
+  background: @contrast;
+}
+input[type='range']:focus::-ms-fill-upper {
+  background: @contrast;
 }
