--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="col">
-    <!-- <app-adder (adding)="toggleAdding($event)" [point]="point"></app-adder> -->
+    <app-adder (adding)="toggleAdding($event)" [point]="point"></app-adder>
 </div> -->
 <agm-map [latitude]="latitude" [longitude]="longitude" [streetViewControl]=false [zoomControl]=false [zoom]=15 (mapClick)="onChooseLocation($event)">
     <agm-marker *ngFor="let marker of markers" [latitude]="marker.latitude" [longitude]="marker.longitude"></agm-marker>
