--- a/src/styles.less
+++ b/src/styles.less
@@ -2,7 +2,7 @@
 @import 'app/less/main';
 body {
     margin: 0;
-    // height: 100%;
+    height: 100%;
     background-color: @background;
     overflow: hidden;
     * {
