--- a/src/app/components/adder/adder.component.less
+++ b/src/app/components/adder/adder.component.less
@@ -2,8 +2,8 @@
 .adder {
     z-index: 500;
     position: absolute;
-    left: 10px;
-    bottom: 100px;
+    right: 10px;
+    bottom: 10px;
     width:80px;
     height: 80px;
     border-radius: 50%;
@@ -34,7 +34,7 @@
         position: absolute;
         font-size: 40px;
         color: @primary;
-        text-shadow: 1px -1px 0px @contrast, 2px -2px 0px @contrast;
+        // text-shadow: 1px -1px 0px @contrast, 2px -2px 0px @contrast;
         transition:  color 2s, background-color .5s;
     }
     .content {
@@ -57,8 +57,8 @@
 .adder.open {
     width: 100vw;
     border-radius: 0;
-    left: 0;
-    bottom: 80px;
+    right: 0;
+    bottom: 0;
     grid-template-areas: 'content';
     .icon {
         width: 50px;
