--- a/src/app/components/home/home.component.less
+++ b/src/app/components/home/home.component.less
@@ -1,6 +1,6 @@
 agm-map {
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100%; /* Fallback for browsers that do not support Custom Properties */
+    // height: calc(var(--vh, 1vh) * 100);
     pointer-events: all;
 }
 app-adder {
