--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="wrap">
+<div class="wrap themed-text">
   <nav class="navbar">
     <div class="logo"><a routerLink="/">Nomad Pitstops</a></div>
     <div class="menu">
@@ -10,10 +10,11 @@
     </div>
     <ul *ngIf="linksVisible" class="links {{linksState}}" [@openItems]>
       <li>
-        <a routerLink="/login">Log In</a>
+        <a *ngIf="!authService.loggedIn()" routerLink="/login">Log In</a>
+      </li>
+      <li>
+        <a *ngIf="authService.loggedIn()" (click)="authService.logout()" routerLink="/login">Log Out</a>
       </li>
     </ul>
   </nav>
 </div>
-
-<!-- <app-adder></app-adder> -->
