--- a/src/app/components/pitstop/pitstop.component.html
+++ b/src/app/components/pitstop/pitstop.component.html
@@ -1,3 +1,7 @@
-<p>
-  pitstop works!
-</p>
+<agm-marker [latitude]="marker.latitude" [longitude]="marker.longitude" (markerClick)="onDisplay()" [openInfoWindow]="true">
+    <agm-info-window>
+        <h2>{{marker.name}}</h2>
+        <p>Internet Connection: {{pitstopService.internetWords(marker.connection)}}</p>
+        <p>Notes: {{marker.notes}}</p>
+    </agm-info-window>
+</agm-marker>
