--- a/src/styles.less
+++ b/src/styles.less
@@ -5,7 +5,7 @@ body {
     height: 100%;
     background-color: @background;
     overflow: hidden;
-    * {
+    * .themed-text{
         font-family: 'Notable', sans-serif;
     }
 }
