--- a/src/styles.less
+++ b/src/styles.less
@@ -4,8 +4,10 @@ body {
     margin: 0;
     height: 100%;
     background-color: @background;
-    overflow: hidden;
     * .themed-text{
         font-family: 'Notable', sans-serif;
+    }
+    .shadow-text {
+        text-shadow: -1px 1px 0px #2B292B, -2px 2px 0px #2B292B, -3px 3px 0px #2B292B, -4px 4px 0px #6e582c;
     }
 }
