--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,20 +1,30 @@
 <div class="wrap themed-text">
-  <nav class="navbar">
-    <div class="logo"><a routerLink="/">Nomad Pitstops</a></div>
-    <div class="menu">
-      <div class="hamberger" (click)="onClickHamberger($event)">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </div>
-    <ul *ngIf="linksVisible" class="links {{linksState}}" [@openItems]>
-      <li>
-        <a *ngIf="!authService.loggedIn()" routerLink="/login">Log In</a>
-      </li>
-      <li>
-        <a *ngIf="authService.loggedIn()" (click)="authService.logout()" routerLink="/login">Log Out</a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="navbar">
+        <div class="logo"><a routerLink="/">Nomad Pitstops</a></div>
+        <div class="menu">
+            <div class="hamberger" (click)="onClickHamberger($event)">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <ul *ngIf="linksVisible" class="links {{linksState}}" [@openItems]>
+            <li>
+                <a routerLink="/blog">Blog</a>
+            </li>
+            <li>
+                <a *ngIf="!authService.loggedIn()" routerLink="/login"
+                    >Log In</a
+                >
+            </li>
+            <li>
+                <a
+                    *ngIf="authService.loggedIn()"
+                    (click)="authService.logout()"
+                    routerLink="/login"
+                    >Log Out</a
+                >
+            </li>
+        </ul>
+    </nav>
 </div>
