--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrap">
-    <app-navbar (adding)="toggleAdding($event)"></app-navbar>
+    <app-navbar></app-navbar>
     <div class="col">
         <router-outlet #routerOutlet="outlet"></router-outlet>
     </div>
