Added pitstops sidebar

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,30 @@
-<div class="col">
-    <app-adder
-        (adding)="toggleAdding($event)"
-        [point]="point"
-        (add)="addPitstops()"
-    ></app-adder>
+<div class="main">
+    <div class="near"><app-near></app-near></div>
+    <div class="map">
+        <div class="col">
+            <app-adder
+                (adding)="toggleAdding($event)"
+                [point]="point"
+                (add)="addPitstops()"
+            ></app-adder>
+        </div>
+        <agm-map
+            [latitude]="latitude"
+            [longitude]="longitude"
+            [streetViewControl]="false"
+            [zoomControl]="false"
+            [zoom]="15"
+            (mapClick)="onChooseLocation($event)"
+        >
+            <app-pitstop
+                *ngFor="let marker of markers"
+                [marker]="marker"
+            ></app-pitstop>
+            <agm-marker
+                *ngIf="point"
+                [latitude]="point.latitude"
+                [longitude]="point.longitude"
+            ></agm-marker>
+        </agm-map>
+    </div>
 </div>
-<agm-map
-    [latitude]="latitude"
-    [longitude]="longitude"
-    [streetViewControl]="false"
-    [zoomControl]="false"
-    [zoom]="15"
-    (mapClick)="onChooseLocation($event)"
->
-    <app-pitstop *ngFor="let marker of markers" [marker]="marker"></app-pitstop>
-    <agm-marker
-        *ngIf="point"
-        [latitude]="point.latitude"
-        [longitude]="point.longitude"
-    ></agm-marker>
-</agm-map>
-<!--
-    <agm-marker [latitude]="marker.latitude" [longitude]="marker.longitude"></agm-marker>
--->
