--- a/src/app/components/adder/adder.component.less
+++ b/src/app/components/adder/adder.component.less
@@ -55,7 +55,7 @@
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.7);
 }
 .adder.open {
-    width: 100vw;
+    width: 100%;
     border-radius: 0;
     right: 0;
     bottom: 0;
