--- a/src/app/components/map/map.component.less
+++ b/src/app/components/map/map.component.less
@@ -16,6 +16,21 @@
         box-shadow: 1px 0px 7px 0px rgba(0,0,0,0.75);
     }
 }
+
+@media only screen and (max-width: 1200px) {
+    .main {
+        grid-template-columns: 2fr 3fr;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .main {
+        grid-template-columns: 1fr;
+    }
+    .near {
+        display: none;
+        visibility: hidden;
+    }
+}
 // agm-map {
 //     height: 100%; /* Fallback for browsers that do not support Custom Properties */
 //     // height: calc(var(--vh, 1vh) * 100);
@@ -34,11 +49,7 @@
 //     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 // }
 
-// @media only screen and (max-width: 900px) {
-//     .places {
-//         width: 95%;
-//     }
-// }
+
 
 // @media only screen and (max-width: 500px) {
 //     .places {
