--- a/src/app/components/near/near.component.html
+++ b/src/app/components/near/near.component.html
@@ -7,8 +7,6 @@
 />
 <div class="nearby" *ngFor="let pitstop of pitstops">
     <app-nearcard
-        [name]="pitstop.name"
-        [internet]="this.pitStopServerice.internetWords(pitstop.connection)"
-        [info]="pitstop.notes"
+        [pitstop]='pitstop'
     ></app-nearcard>
 </div>
