--- a/src/app/components/near/nearcard/nearcard.component.html
+++ b/src/app/components/near/nearcard/nearcard.component.html
@@ -1,6 +1,5 @@
-<div class="wrap">
-    
+<div class="wrap" (click)="onClick()">
     <h2 class="name">{{name}}</h2>
-    <h4 class="internet">Internet: {{internet}}</h4>
-    <p class="info">{{info}}</p>
+    <h4 class="connection">Internet: {{connection}}</h4>
+    <p class="notes">{{notes}}</p>
 </div>
