--- a/src/app/components/near/nearcard/nearcard.component.less
+++ b/src/app/components/near/nearcard/nearcard.component.less
@@ -1,5 +1,5 @@
 .wrap {
-    margin: 0.4rem;
+    margin: 1rem;
     padding: 0.4rem;
     border-radius: 3px;
     background-color: white;
@@ -7,5 +7,8 @@
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .wrap:hover {
+    margin-right: .5rem;
+    margin-left: .5rem;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    cursor: pointer;
 }
