--- a/src/app/components/near/near.component.less
+++ b/src/app/components/near/near.component.less
@@ -5,7 +5,7 @@
     width: 90%;
     border: none;
     border-radius: 3px;
-    margin: 5px;
+    margin: .4rem;
     padding: 10px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
