Added near me functionality to api

--- a/src/app/components/signup/signup.component.less
+++ b/src/app/components/signup/signup.component.less
@@ -6,12 +6,14 @@
     form {
         grid-area: form;
         display: grid;
+        grid-template-columns: 1fr;
         grid-template-areas: 
             'email'
             'username'
             'password'
             'repeat'
             'submit';
+        
         grid-gap: 20px;;
         .first {
             grid-area: first;
