--- a/src/app/components/map/map.component.less
+++ b/src/app/components/map/map.component.less
@@ -4,6 +4,7 @@
     grid-template-columns: 1fr 3fr;
     height: 100%;
     .map {
+        position: relative;
         agm-map {
             height: 100%;
         }
