fixed annoying sidebar bug

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
                 <div></div>
             </div>
         </div>
-        <ul *ngIf="linksVisible" class="links {{linksState}}" [@openItems]>
+        <ul class="links {{linksState}}" [@openItems]>
             <li>
                 <a routerLink="/blog">Blog</a>
             </li>
