--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -86,7 +86,13 @@
             -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
-            
+            transition: right .5s;
+        }
+        .links.open {
+
+        }
+        .links.close {
+            right: -100%;
         }
     }
 }
