--- a/src/app/components/near/nearcard/nearcard.component.html
+++ b/src/app/components/near/nearcard/nearcard.component.html
@@ -1,4 +1,4 @@
-<div class="wrap" (click)="onClick()">
+<div class="wrap" (click)="onClick()" (touchstart)="onClick()">
     <h2 class="name">{{name}}</h2>
     <h4 class="connection">Internet: {{connection}}</h4>
     <p class="notes">{{notes}}</p>
