--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -49,6 +49,10 @@
             list-style-type: none;
             padding: 5px;
         }
+        .near {
+            display: none;
+            visibility: hidden;
+        }
         
     }
 }
@@ -87,6 +91,10 @@
             -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.35);
             transition: right .5s;
+            .near {
+                display: initial;
+                visibility: visible;
+            }
         }
         .links.open {
 
@@ -94,5 +102,6 @@
         .links.close {
             right: -100%;
         }
+        
     }
 }
