adding landing page stuff

--- a/src/app/components/blogs/blog/blog.component.html
+++ b/src/app/components/blogs/blog/blog.component.html
@@ -1,3 +1,5 @@
-<p>
-  blog works!
-</p>
+<div class="__card __card-reactive">
+    <h1 class="title">{{title}}</h1>
+    <div class="content" [innerHTML]="content">
+    </div>
+</div>
