--- a/src/app/components/map/map.component.less
+++ b/src/app/components/map/map.component.less
@@ -1,8 +1,12 @@
 .main {
+    height: 100%;
+    max-width: 100%;
+    overflow: hidden;
     pointer-events: all;
     display: grid;
     grid-template-columns: 1fr 3fr;
     height: 100%;
+    position: relative;
     .map {
         position: relative;
         agm-map {
