--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -2,12 +2,12 @@
     <h3 class="title">- Blog -</h3>
 </div>
 <div class="posts" >
-    <div class="post" *ngFor="let post of posts">
+    <a class="post" *ngFor="let post of posts" routerLink="{{post.id}}">
         <div class="image">
-            <img src="https://theblondeabroad.com/wp-content/uploads/2018/07/jaime-arrieta-237601-unsplash.jpg" alt="">
+            <img src={{post.thumbnail}} alt="">
         </div>
         <div class="title">
-            <h1>How To Pack For Your First Trip As A digital Nomad</h1>
+            <h1>{{post.title}}</h1>
         </div>
-    </div>
+    </a>
 </div>
