--- a/src/app/components/blogs/blogs.component.less
+++ b/src/app/components/blogs/blogs.component.less
@@ -6,7 +6,7 @@
         color: @primary;
         font-size: 3rem;
     }
-    border-bottom:20px double @primary;
+    border-bottom: 20px double @primary;
 }
 .posts {
     display: grid;
@@ -16,22 +16,26 @@
     pointer-events: all;
     .post {
         position: relative;
+        text-decoration: none;
+        color: inherit;
         img {
             width: 100%;
             height: 100%;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+                0 1px 2px rgba(0, 0, 0, 0.24);
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
         }
         .title {
             position: absolute;
             bottom: 0;
             right: 50%;
             background-color: @primary;
-            width:75%;
+            width: 75%;
             transform: translate(50%, 50%);
 
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+                0 1px 2px rgba(0, 0, 0, 0.24);
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
             * {
                 text-align: center;
             }
@@ -40,10 +44,12 @@
     .post:hover {
         cursor: pointer;
         img {
-            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+                0 10px 10px rgba(0, 0, 0, 0.22);
         }
         .title {
-            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+                0 10px 10px rgba(0, 0, 0, 0.22);
         }
     }
 }
