--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,9 @@
                 <a routerLink="/blog">Blog</a>
             </li>
             <li>
+                <a routerLink="/map">Map</a>
+            </li>
+            <li>
                 <a routerLink="nearme" class="near">Nearby</a>
             </li>
             <li>
