--- a/src/app/components/near/nearcard/nearcard.component.less
+++ b/src/app/components/near/nearcard/nearcard.component.less
@@ -1,3 +1,4 @@
+@import '../../../less/main';
 .wrap {
     pointer-events: all;
     margin: 1rem;
@@ -6,6 +7,8 @@
     background-color: white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    // border-bottom: 3px solid @primary;
+    // color: white;
 }
 .wrap:hover {
     margin-right: .5rem;
