changed some landing stuff

--- a/src/app/less/main.less
+++ b/src/app/less/main.less
@@ -2,3 +2,5 @@
 @import 'components/buttons';
 @import 'components/input';
 @import 'components/labels';
+@import 'components/card';
+@import './components/fonts.less';
