--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,4 +1,4 @@
-// @import 'variables';
+@import 'less/main';
 app-navbar {
     position: fixed;
     z-index: 4;
@@ -11,9 +11,9 @@ app-navbar {
     height: calc(var(--vh, 1vh) * 100);
     display: grid;
     grid-template-rows: 80px;
-    pointer-events: none;
+    // pointer-events: none;
     .col {
-        pointer-events: none;
+        // pointer-events: none;
         z-index: 3;
         grid-row: 2;
         display: block;
@@ -22,6 +22,7 @@ app-navbar {
         right: 0;
         width: 100%;
         height: 100%;
+        max-height: 91.2vh;
         * {
             pointer-events: all;
             display: block;
