--- a/src/app/less/components/variables.less
+++ b/src/app/less/components/variables.less
@@ -2,3 +2,8 @@
 @primary:#c29d52;
 @contrast:#6e582c;
 @mobile: 600px;
+
+@shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+@shadowLifted: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+
+@transitionCubic: 0.3s cubic-bezier(.25,.8,.25,1);
