angular universalized lol

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<!-- <div class="main">
     <div class="near"><app-near></app-near></div>
     <div class="map">
         <div class="col">
@@ -27,4 +27,13 @@
             ></agm-marker>
         </agm-map>
     </div>
-</div>
+</div> -->
+
+<!-- <agm-map
+            [latitude]="latitude"
+            [longitude]="longitude"
+            [streetViewControl]="false"
+            [zoomControl]="false"
+            [zoom]="15"
+            (mapClick)="onChooseLocation($event)"
+        ></agm-map> -->
