--- a/src/app/components/blogs/blogs.component.less
+++ b/src/app/components/blogs/blogs.component.less
@@ -1,4 +1,9 @@
 @import '../../less/main.less';
+.body {
+    margin-top: 80px;
+    height: 100%;
+    background-color: @background;
+}
 .head {
     .title {
         line-height: 1;
