--- a/src/app/components/near/near.component.less
+++ b/src/app/components/near/near.component.less
@@ -15,4 +15,14 @@
 }
 .cards {
     height: 100%;
+    overflow: hidden;
+    position: absolute;
+    // overflow: auto;
+    // direction:ltr;
+}
+.wrap {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    position: relative;
 }
