--- a/src/app/components/blogs/blog/blog.component.html
+++ b/src/app/components/blogs/blog/blog.component.html
@@ -1,5 +1,12 @@
-<div class="__card __card-reactive">
-    <h1 class="title">{{title}}</h1>
-    <div class="content" [innerHTML]="content">
+<div class="blog">
+    <div class="social-bar">
+        <!-- <app-social-share></app-social-share> -->
+        
+    </div>
+    <div class="content">
+        <h1 class="title">{{ title }}</h1>
+        <h3 class="date">{{ date }}</h3>
+        <app-social-share></app-social-share>
+        <div class="body" [innerHTML]="content"></div>
     </div>
 </div>
