--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -45,7 +45,7 @@
         justify-self: right;
         padding-right: 10px;
         display: flex;
-        li {
+        div {
             list-style-type: none;
             padding: 5px;
         }
