--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -4,29 +4,5 @@ app-navbar {
     z-index: 4;
     width:100%;
     pointer-events: none;
-}
-
-.wrap {
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
-    display: grid;
-    grid-template-rows: 80px;
-    // pointer-events: none;
-    .col {
-        // pointer-events: none;
-        z-index: 3;
-        grid-row: 2;
-        display: block;
-        position: relative;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        max-height: 91.2vh;
-        * {
-            pointer-events: all;
-            display: block;
-            overflow: hidden;
-        }
-    }
+    top: 0;
 }
