universal is now the way of the force lol

--- a/src/app/components/social-share/social-share.component.html
+++ b/src/app/components/social-share/social-share.component.html
@@ -1,5 +1,5 @@
 <div class="container themed-text">
-    <div class="btn twitter" (click)="onTweet($event)">
+    <div class="btn twitter" (click)="onTweet()">
         <i class="fab fa-twitter"></i>
         <div class="content">Tweet</div>
     </div>
@@ -7,7 +7,7 @@
         <i class="fab fa-pinterest-p"></i>
         <div class="content">Pin</div>
     </a>
-    <div class="btn facebook"  (click)="shareToFacebook($event)">
+    <div class="btn facebook"  (click)="shareToFacebook()">
         <i class="fab fa-facebook-f"></i>
         <div class="content">Post</div>
     </div>
